<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="album_cover_description">Carátula de álbum</string>
    <string name="album_icon_desc">Ícono de álbum</string>
    <string name="albums_label">Álbumes</string>
    <string name="app_name">Vinilos-E15</string>
    <string name="chevron_icon_desc">Flecha de navegación</string>
    <string name="error_loading_content">Error al cargar contenido. Por favor intenta de nuevo.</string>
    <string name="musician_image_description">Imagen del artista %s</string>
    <string name="no_albums_found">No se encontraron álbumes</string>
    <string name="no_artists_found">No se encontraron artistas</string>
    <string name="no_results_for_query">Sin resultados para "%s"</string>
    <string name="no_collectors_found">No se encontraron coleccionistas</string>
    <string name="no_prizes">Sin premios</string>
    <string name="search_hint_album">Buscar álbum…</string>
    <string name="search_hint_artist">Buscar artista…</string>
    <string name="search_hint_collectors">Buscar coleccionistas…</string>
    <string name="see_less_label">Ver menos</string>
    <string name="see_more_label">Ver más</string>
    <string name="sort_date">FECHA</string>
    <string name="sort_name">NOMBRE (A-Z)</string>
    <string name="subtitle_desc">Subtítulo descriptivo</string>
    <string name="swap_order_button">Botón de cambio de orden ascendente o descendente</string>
    <string name="title_label">Título</string>
    <plurals name="track_count">
        <item quantity="one">%d canción</item>
        <item quantity="other">%d canciones</item>
    </plurals>
    <string name="album_create_button_text">Crear</string>
    <string name="album_created_success">Álbum creado exitosamente</string>
    <string name="artist_no_albums">Este artista no tiene álbumes</string>
    <string name="associate_button">ASOCIAR</string>
    <string name="associate_track_title">Asociar canción</string>
    <string name="associate_tracks_fab_desc">Asociar tracks</string>
    <string name="btn_create">CREAR</string>
    <string name="cancel_button">CANCELAR</string>
    <string name="favorite_albums">Álbumes\nfavoritos</string>
    <string name="favorite_artists">Artistas\nfavoritos</string>
    <string name="hint_album_name">Nombre del álbum</string>
    <string name="hint_cover_url">https://ejemplo.com/imagen.jpg</string>
    <string name="hint_day">Día</string>
    <string name="hint_description">Cuéntanos más sobre este álbum…</string>
    <string name="hint_year">Año</string>
    <string name="info_catalog_desc">Esta canción será asociada directamente a la biblioteca editorial actual. Asegúrate de que los metadatos coincidan con la grabación maestra.</string>
    <string name="info_catalog_title">Información de catálogo</string>
    <string name="label_cover">PORTADA (URL)</string>
    <string name="label_description">DESCRIPCIÓN</string>
    <string name="label_genre">GÉNERO</string>
    <string name="label_name">NOMBRE</string>
    <string name="label_record_label">SELLO DISCOGRÁFICO</string>
    <string name="label_release_date">FECHA DE LANZAMIENTO</string>
    <string name="min_label">MIN</string>
    <string name="minutes_placeholder">mm</string>
    <string name="search_album">Buscar álbum</string>
    <string name="seconds_placeholder">ss</string>
    <string name="seg_label">SEG</string>
    <string name="track_duration_label">DURACIÓN</string>
    <string name="track_name_label">NOMBRE</string>
    <string name="track_name_placeholder">Nombre de la canción</string>
    <string name="track_number">%s</string>
    <string name="tracklist">Tracklist</string>
    <string name="trophy_description">ícono de trofeo</string>
    <string name="duration_separator">:</string>
    <string name="title_albums">Álbumes</string>
    <string name="subtitle_albums">Explora colecciones</string>
    <string name="title_artists">Artistas</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="subtitle_collectors">Comunidad de élite</string>
    <string name="coming_soon">Próximamente</string>
</resources>
